Fixes #1422, #1423- form layout issues

--- a/src/definitions/collections/form.less
+++ b/src/definitions/collections/form.less
@@ -44,12 +44,13 @@
         Field
 ---------------------*/
 
+.ui.form .fields .field,
 .ui.form .field {
   clear: both;
   margin: @fieldMargin;
 }
-.ui.form .fields:last-child .field,
-.ui.form :not(.fields) .field:last-child {
+.ui.form .fields:last-child,
+.ui.form .field:last-child {
   margin-bottom: 0em;
 }
 
@@ -669,7 +670,8 @@
   .ui.form .four.fields > .field,
   .ui.form .five.fields > .fields,
   .ui.form .five.fields > .field {
-    width: @oneColumn;
+    width: @oneColumn !important;
+    margin: @fieldMargin;
     padding-left: 0%;
     padding-right: 0%;
   }
@@ -771,7 +773,7 @@
   .ui.form .fields > .fourteen.wide.field,
   .ui.form .fields > .fifteen.wide.field,
   .ui.form .fields > .sixteen.wide.field {
-    width: @oneColumn;
+    width: @oneColumn !important;
     padding-left: 0%;
     padding-right: 0%;
   }
